--- a/spotify.html
+++ b/spotify.html
@@ -22,32 +22,26 @@
     <h1>SPOTIFY</h1>
     <p> A case study of Spotify's UI design would analyze the user interface and user experience of the music streaming platform, highlighting its strengths and weaknesses. Here's a breakdown:
         <br>
-        _Overview_
-        - Spotify's UI is modern, intuitive, and optimized for music discovery and playback.
-        - The platform effectively uses color, typography, and imagery to create a engaging and user-friendly experience.
+        <b>Overview</b>
         <br>
-        _Key Design Elements_
-        1. _Simple Navigation_: Tab bar and search bar provide easy access to content.
-        2. _Discover Weekly and Release Radar_: Personalized playlists based on user behavior.
-        3. _Search and Browse_: Robust search functionality and curated playlists.
-        4. _Playback Controls_: Intuitive controls for playing, pausing, and skipping tracks.
-        5. _Dark Mode and Color Scheme_: Visually appealing and consistent design language.
+        Spotify's UI is modern, intuitive, and optimized for music discovery and playback.
+        The platform effectively uses color, typography, and imagery to create a engaging and user-friendly experience.
         <br>
-        _Design Strengths_
-        1. _Clean and Minimalistic Design_: Easy to use and navigate.
-        2. _Personalized Experience_: AI-driven recommendations and playlists.
-        3. _Seamless Music Playback_: Smooth transitions between tracks and playlists.
-        4. _Consistent Branding_: Recognizable color scheme and typography throughout.
         <br>
-        _Design Weaknesses_
-        1. _Information Overload_: Too many playlists and features can be overwhelming.
-        2. _Limited Social Features_: Difficult to discover and connect with friends.
-        3. _No Lyrics Feature_: Missing a key feature for music enthusiasts.
+        <b>Design Strengths</b>
         <br>
-        _Design Improvements_
-        1. _Simplify Playlist Management_: Improve organization and curation of playlists.
-        2. _Enhance Social Features_: Introduce features to easily discover and connect with friends.
-        3. _Integrate Lyrics Feature_: Provide users with a comprehensive music experience.
+        1.Clean and Minimalistic Design: Easy to use and navigate.
+        2.Personalized Experience: AI-driven recommendations and playlists.
+        <br>
+        <b>Design Weaknesses</b>
+        <br>
+        1.Information Overload: Too many playlists and features can be overwhelming.
+        2.Limited Social Features: Difficult to discover and connect with friends.
+        <br>
+        <b>Design Improvements</b>
+        1.Simplify Playlist Management: Improve organization and curation of playlists.
+        2.Enhance Social Features: Introduce features to easily discover and connect with friends.
+        
         <br>
         By analyzing Spotify's UI design, we can learn valuable lessons in creating an engaging, user-friendly, and personalized music streaming interface that prioritizes discovery, playback, and user experience.</p>
 </body>
