--- a/youtube.html
+++ b/youtube.html
@@ -22,31 +22,33 @@
     <h1>YOUTUBE</h1>
     <p>A case study of YouTube's UI design would analyze the user interface and user experience of the platform, highlighting its strengths and weaknesses. Here's a breakdown:
         <br>
-        *Overview*
-        1. YouTube's UI is simple, intuitive, and consistent across devices.
-        2. The platform prioritizes video content, making it easily accessible and engaging.
+        <b>Overview</b>
+        <br>
+        YouTube's UI is simple, intuitive, and consistent across devices.The platform prioritizes video content, making it easily accessible and engaging.
        <br>
-        *Key Design Elements*
-        1. *Navigation*: Simple and minimalistic, with a focus on search and browsing.
-        2. *Video Player*: Clean and distraction-free, with controls that disappear when not in use.
-        3. *Thumbnail-based Layout*: Visual-centric, making it easy to scan and select videos.
-        4. *Card-based Interface*: Organizes content into easily digestible chunks.
-        5. *Consistent Branding*: Recognizable color scheme and typography throughout.
+        <b>Key Design Elements</b>
         <br>
-        *Design Strengths*
-        1. *Accessibility*: Easy to use across various devices and platforms.
-        2. *Discoverability*: Algorithm-driven recommendations encourage exploration.
-        3. *Engagement*: Features like likes, comments, and subscriptions foster community interaction.
+        1. Navigation*: Simple and minimalistic, with a focus on search and browsing.
+        2. Thumbnail-based Layout*: Visual-centric, making it easy to scan and select
+    
         <br>
-        *Design Weaknesses*
-        1. *Information Overload*: Too many videos and features can be overwhelming.
-        2. *Cluttered Desktop Interface*: Less intuitive than the mobile app.
-        3. *Limited Customization*: Users have limited control over the UI.
+        <b>Design Strengths</b>
         <br>
-        *Design Improvements*
-        1. *Simplify Desktop Interface*: Align it with the mobile app's clean design.
-        2. *Enhance Customization*: Allow users to personalize their experience.
-        3. *Improve Content Organization*: Introduce features to help users manage their watched videos and recommendations.
+        1. Accessibility*: Easy to use across various devices and platforms.
+        2. Discoverability*: Algorithm-driven recommendations encourage exploration.
+        3. Engagement*: Features like likes, comments, and subscriptions foster community interaction.
+        <br>
+        <b>Design Weaknesses</b>
+        <br>
+        1. Information Overload*: Too many videos and features can be overwhelming.
+        2. Cluttered Desktop Interface*: Less intuitive than the mobile app.
+        3. Limited Customization*: Users have limited control over the UI.
+        <br>
+        <b>Design Improvements</b>
+        <br>
+        1. Simplify Desktop Interface: Align it with the mobile app's clean design.
+        2. Enhance Customization: Allow users to personalize their experience.
+        
         <br>
         By analyzing YouTube's UI design, we can learn valuable lessons in creating an engaging, user-friendly, and scalable interface that prioritizes content and user experience.</p>
 </body>
