--- a/flipkart.html
+++ b/flipkart.html
@@ -22,32 +22,32 @@
     <h1>FLIPKART</h1>
     <p> A case study of Flipkart's UI design would analyze the user interface and user experience of the e-commerce platform, highlighting its strengths and weaknesses. Here's a breakdown:
         <br>
-        _Overview_
-        - Flipkart's UI is user-friendly, visually appealing, and optimized for online shopping.
-        - The platform effectively showcases products, prioritizes user experience, and seamlessly integrates features.
+        <b>Overview</b>
         <br>
-        _Key Design Elements_
-        1. _Navigation_: Intuitive and categorized, making it easy to find products.
-        2. _Product Showcase_: High-quality images, detailed product information, and user reviews.
-        3. _Search Functionality_: Robust and suggests relevant products as you type.
-        4. _Filter and Sorting Options_: Enhance product discovery and comparison.
-        5. _Consistent Branding_: Recognizable color scheme and typography throughout.
+        Flipkart's UI is user-friendly, visually appealing, and optimized for online shopping.The platform effectively showcases products, prioritizes user experience, and seamlessly integrates features.
         <br>
-        _Design Strengths_
-        1. _Simple and Clean Design_: Easy to use and navigate.
-        2. _Prominent Call-to-Actions_: Encourage users to make purchases.
-        3. _Personalized Recommendations_: Enhance user experience and encourage discovery.
-        4. _User Reviews and Ratings_: Build trust and help with purchasing decisions.
+        <b>Key Design Elements</b>
         <br>
-        _Design Weaknesses_
-        1. _Information Overload_: Too many products and features can be overwhelming.
-        2. _Complex Product Categories_: Difficult to find specific products.
-        3. _Limited Product Comparison_: Difficult to compare multiple products simultaneously.
+        1.Navigation_: Intuitive and categorized, making it easy to find products.
+        2.Product Showcase_: High-quality images, detailed product information, and user reviews.
+        
         <br>
-        _Design Improvements_
-        1. _Simplify Product Categories_: Improve product discovery and filtering.
-        2. _Enhance Product Comparison_: Introduce features to easily compare multiple products.
-        3. _Optimize Search Functionality_: Improve search results and suggestions.
+        <b>Design Strengths</b>
+        <br>
+        1. Simple and Clean Design_: Easy to use and navigate.
+        2. Personalized Recommendations_: Enhance user experience and encourage discovery.
+        3. User Reviews and Ratings_: Build trust and help with purchasing decisions.
+        <br>
+        <b>Design Weaknesses</b>
+        <br>
+        1. Information Overload_: Too many products and features can be overwhelming.
+        2. Complex Product Categories_: Difficult to find specific products.
+        3. Limited Product Comparison_: Difficult to compare multiple products simultaneously.
+        <br>
+        <b>Design Improvements</b>
+        <br>
+        1. Enhance Product Comparison_: Introduce features to easily compare multiple products.
+        2. Optimize Search Functionality_: Improve search results and suggestions.
         <br>
         By analyzing Flipkart's UI design, we can learn valuable lessons in creating an effective e-commerce interface that prioritizes user experience, product showcase, and personalization, while also addressing areas for improvement to enhance overall usability.</p>
 </body>
